# amzcard_payment_calculator

./: README.md  calculate_bill.py  pyproject.toml  read_statement.py
tests/: test_calculate_bill.py
tests/fixtures/: sample-feb-march-statement.csv
