[tool.poetry]
name = "amzcard_payment_calculator"
version = "0.1.0"
description = ""
authors = ["Tyler Stapler <tystapler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
camelot-py = "^0.8.2"
opencv-python = "^4.4.0"
matplotlib = "^3.3.3"
yapf = "^0.30.0"
excalibur-py = "^0.4.3"
pylint = "^2.7.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
